# customer_management

backend/: .env.example  README.md  main.py  pyproject.toml
backend/app/: __init__.py
backend/app/api/v1/: __init__.py  customer.py
backend/app/core/: config.py  database.py
backend/app/crud/: __init__.py  customer.py
backend/app/models/: __init__.py  customer.py
backend/app/schemas/: __init__.py  customer.py
backend/examples/: keyword_args_example.py
backend/tests/: conftest.py  sqlmoeltest.py  test_customer_api.py
frontend/: package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: App.vue
frontend/src/components/: CustomerList.vue  NaiveTable.vue  NaiveTest.vue
frontend/src/config/: api.ts  enums.ts
frontend/src/router/: index.ts
frontend/src/services/: customerService.ts
frontend/src/stores/: customer.ts  customerStore.ts
frontend/src/utils/: request.ts
frontend/src/views/customers/: index.vue
